3 constants, first kenr, kbnr, diff

--- a/simulation/sim_notebooks/2020-10-05-kenr-kbnr-diff.ipynb
+++ b/simulation/sim_notebooks/2020-10-05-kenr-kbnr-diff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,51 @@
       "End exiton simulation: 2020-10-05 15:02:10.053752\n",
       "Elapsed time: 00:01:53\n",
       "rate constant set processed(2/ 10)\n",
-      "Start of exiton simulation: 2020-10-05 15:02:10.055148\n"
+      "Start of exiton simulation: 2020-10-05 15:02:10.055148\n",
+      "End exiton simulation: 2020-10-05 15:03:36.401117\n",
+      "Elapsed time: 00:01:26\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:03:36.407449\n",
+      "End exiton simulation: 2020-10-05 15:04:51.107213\n",
+      "Elapsed time: 00:01:14\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:04:51.112626\n",
+      "End exiton simulation: 2020-10-05 15:05:58.252170\n",
+      "Elapsed time: 00:01:07\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:05:58.256893\n",
+      "End exiton simulation: 2020-10-05 15:07:01.240411\n",
+      "Elapsed time: 00:01:02\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:07:01.241924\n",
+      "End exiton simulation: 2020-10-05 15:08:01.134584\n",
+      "Elapsed time: 00:00:59\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:08:01.138576\n",
+      "End exiton simulation: 2020-10-05 15:08:56.311818\n",
+      "Elapsed time: 00:00:55\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:08:56.313304\n",
+      "End exiton simulation: 2020-10-05 15:09:49.050578\n",
+      "Elapsed time: 00:00:52\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:09:49.053214\n",
+      "End exiton simulation: 2020-10-05 15:10:38.818295\n",
+      "Elapsed time: 00:00:49\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-05 15:10:38.822755\n",
+      "End exiton simulation: 2020-10-05 15:11:26.563484\n",
+      "Elapsed time: 00:00:47\n",
+      "End exiton simulation: 2020-10-05 15:11:26.576326\n",
+      "Elapsed time: 00:12:47\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
      ]
     }
    ],
@@ -420,6 +464,246 @@
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
     "                                    diff_const, (1.07e15, 1.07e15/3),\n",
     "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-06-exciton_sim-kenr_kbnr_diff_4.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-06 11:36:08.200806\n",
+      "Start of exiton simulation: 2020-10-06 11:36:08.201877\n",
+      "End exiton simulation: 2020-10-06 11:44:31.178589\n",
+      "Elapsed time: 00:08:22\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 11:44:31.187782\n",
+      "End exiton simulation: 2020-10-06 11:53:37.517712\n",
+      "Elapsed time: 00:09:06\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 11:53:37.522451\n",
+      "End exiton simulation: 2020-10-06 12:03:10.974255\n",
+      "Elapsed time: 00:09:33\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:03:10.978627\n",
+      "End exiton simulation: 2020-10-06 12:12:48.039316\n",
+      "Elapsed time: 00:09:37\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:12:48.044280\n",
+      "End exiton simulation: 2020-10-06 12:22:21.076019\n",
+      "Elapsed time: 00:09:33\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:22:21.080436\n",
+      "End exiton simulation: 2020-10-06 12:31:47.751832\n",
+      "Elapsed time: 00:09:26\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:31:47.753355\n",
+      "End exiton simulation: 2020-10-06 12:41:16.493538\n",
+      "Elapsed time: 00:09:28\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:41:16.497388\n",
+      "End exiton simulation: 2020-10-06 12:50:28.868677\n",
+      "Elapsed time: 00:09:12\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:50:28.877495\n",
+      "End exiton simulation: 2020-10-06 12:59:46.842533\n",
+      "Elapsed time: 00:09:17\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:59:46.844281\n",
+      "End exiton simulation: 2020-10-06 13:17:52.942836\n",
+      "Elapsed time: 00:09:01\n",
+      "End exiton simulation: 2020-10-06 13:17:52.947278\n",
+      "Elapsed time: 01:41:44\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e15 * 2, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e15/3 * 2, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(2e8, 2e8 / 2, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 4e8 / 2, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-05-exciton_sim-kenr_kbnr_diff_prist_5.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-06 17:38:54.713252\n",
+      "Start of exiton simulation: 2020-10-06 17:38:54.714010\n",
+      "End exiton simulation: 2020-10-06 17:40:38.182318\n",
+      "Elapsed time: 00:01:43\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:40:38.184690\n",
+      "End exiton simulation: 2020-10-06 17:42:35.250561\n",
+      "Elapsed time: 00:01:57\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:42:35.252366\n",
+      "End exiton simulation: 2020-10-06 17:44:29.062746\n",
+      "Elapsed time: 00:01:53\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:44:29.067991\n",
+      "End exiton simulation: 2020-10-06 17:46:16.905787\n",
+      "Elapsed time: 00:01:47\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:46:16.915607\n",
+      "End exiton simulation: 2020-10-06 17:48:02.797822\n",
+      "Elapsed time: 00:01:45\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:48:02.803184\n",
+      "End exiton simulation: 2020-10-06 17:49:43.719947\n",
+      "Elapsed time: 00:01:40\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:49:43.725231\n",
+      "End exiton simulation: 2020-10-06 17:51:21.983527\n",
+      "Elapsed time: 00:01:38\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:51:21.988169\n",
+      "End exiton simulation: 2020-10-06 17:52:58.559749\n",
+      "Elapsed time: 00:01:36\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:52:58.566001\n",
+      "End exiton simulation: 2020-10-06 17:54:31.604103\n",
+      "Elapsed time: 00:01:33\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:54:31.605844\n",
+      "End exiton simulation: 2020-10-06 17:56:00.932154\n",
+      "Elapsed time: 00:01:29\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 17:56:00.935815\n",
+      "End exiton simulation: 2020-10-06 17:57:29.968742\n",
+      "Elapsed time: 00:01:29\n",
+      "End exiton simulation: 2020-10-06 17:57:29.992523\n",
+      "Elapsed time: 00:18:35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-05-exciton_sim-kenr_kbnr_diff_defect_6.h5', kin_const_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-06 18:03:02.028931\n",
+      "Start of exiton simulation: 2020-10-06 18:03:02.030846\n",
+      "End exiton simulation: 2020-10-06 18:11:45.950742\n",
+      "Elapsed time: 00:08:43\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:11:45.952899\n",
+      "End exiton simulation: 2020-10-06 18:20:51.057637\n",
+      "Elapsed time: 00:09:05\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:20:51.063259\n",
+      "End exiton simulation: 2020-10-06 18:30:06.310783\n",
+      "Elapsed time: 00:09:15\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:30:06.315467\n",
+      "End exiton simulation: 2020-10-06 18:39:16.272143\n",
+      "Elapsed time: 00:09:09\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:39:16.279592\n",
+      "End exiton simulation: 2020-10-06 18:48:36.544332\n",
+      "Elapsed time: 00:09:20\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:48:36.548101\n",
+      "End exiton simulation: 2020-10-06 18:57:50.673515\n",
+      "Elapsed time: 00:09:14\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 18:57:50.678097\n",
+      "End exiton simulation: 2020-10-06 19:07:15.033399\n",
+      "Elapsed time: 00:09:24\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 19:07:15.034703\n",
+      "End exiton simulation: 2020-10-06 19:16:31.667256\n",
+      "Elapsed time: 00:09:16\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 19:16:31.672110\n",
+      "End exiton simulation: 2020-10-06 19:25:44.021127\n",
+      "Elapsed time: 00:09:12\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 19:25:44.022645\n",
+      "End exiton simulation: 2020-10-06 19:35:04.845066\n",
+      "Elapsed time: 00:09:20\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 19:35:04.848215\n"
+     ]
+    }
+   ],
+   "source": [
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(10000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
     "exc_sim_ker_kbnr_diff_1.save()"
    ]
   },
