--- a/simulation/sim_notebooks/2020-10-06-ker-kbnr-diff-2.ipynb
+++ b/simulation/sim_notebooks/2020-10-06-ker-kbnr-diff-2.ipynb
@@ -319,8 +319,10 @@
     }
    ],
    "source": [
+    "# %load quick_imports.txt\n",
     "import random\n",
     "import sys\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -343,15 +345,8 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from mc_sim import exciton_sim\n",
+    "\n",
     "k_er_per_s = 1e8\n",
     "k_br_per_s = 1e8  # constant for radiativ decay from S11*\n",
     "k_enr_per_s = 2e8 \n",
@@ -371,11 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-05-exciton_sim-kenr_kbnr_diff_prist_3.h5', kin_const_1)"
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 2.14e15, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 2.14e15/3, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(1e8, 2e8, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 8e8, 10)"
    ]
   },
   {
@@ -384,57 +385,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff_const = np.zeros((10, 2))\n",
-    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e16, 10)\n",
-    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e16/3, 10)\n",
-    "\n",
-    "constants_array = np.zeros((10, 2))\n",
-    "constants_array[:, 0] = np.linspace(2e8, 1e7, 10)\n",
-    "constants_array[:, 1] = np.linspace(4e8, 4e9, 10)"
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-06-exciton_sim-ker_kbnr_diff_defect_8.h5', kin_const_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-10-05 14:47:55.560736\n",
-      "Start of exiton simulation: 2020-10-05 14:47:55.562863\n",
-      "End exiton simulation: 2020-10-05 14:49:35.738555\n",
-      "Elapsed time: 00:01:40\n",
-      "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-10-05 14:49:35.741507\n",
-      "End exiton simulation: 2020-10-05 14:51:30.928507\n",
-      "Elapsed time: 00:01:55\n",
-      "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-10-05 14:51:30.935603\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-40d7f51e9c14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                                    \u001b[0;34m[\u001b[0m\u001b[0;34m'k_br'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_er'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_bnr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_enr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_be'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_ed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_de'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_dnr'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                     \u001b[0mdiff_const\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1.07e15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.07e15\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                    {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mexc_sim_ker_kbnr_diff_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/CNTSimFile.py\u001b[0m in \u001b[0;36mparameter_dependence\u001b[0;34m(self, n_photons, func, constant_dependence, chosen_const, constant_names, diff_const, ref_diff_const, func_kwargs, plot)\u001b[0m\n\u001b[1;32m    571\u001b[0m                     {'Diff_exc_e': diff_const[i, 0],\n\u001b[1;32m    572\u001b[0m                      \u001b[0;34m'Diff_exc_d'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdiff_const\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 573\u001b[0;31m                      **func_kwargs})\n\u001b[0m\u001b[1;32m    574\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_delta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_ref\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_ref\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/CNTSimFile.py\u001b[0m in \u001b[0;36mphotons_fate\u001b[0;34m(self, n_photons, func, rate_const, func_kwargs)\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0;31m# loop for the desired number of photons\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_photons\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 139\u001b[0;31m             \u001b[0mphotons_fate\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrate_const\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrate_const\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfunc_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    140\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotebook_output\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m                 \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"Processing photon ({p+2}/ {n_photons})\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/mc_sim.py\u001b[0m in \u001b[0;36mexciton_sim\u001b[0;34m(t_step, rate_const, Diff_exc_e, Diff_exc_d, n_defects, CNT_length, r_exc_nm, alpha)\u001b[0m\n\u001b[1;32m    483\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    484\u001b[0m             p_fate = np.array([e * random.uniform(0, 1)\n\u001b[0;32m--> 485\u001b[0;31m                                for e in constants[8:]])\n\u001b[0m\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    487\u001b[0m             \u001b[0;31m# Store result for highest probability\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/mc_sim.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    482\u001b[0m         \u001b[0;31m# fate of dark exciton\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    483\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 484\u001b[0;31m             p_fate = np.array([e * random.uniform(0, 1)\n\u001b[0m\u001b[1;32m    485\u001b[0m                                for e in constants[8:]])\n\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Start of calculation: 2020-10-06 11:56:10.524517\n",
+      "Start of exiton simulation: 2020-10-06 11:56:10.524769\n",
+      "End exiton simulation: 2020-10-06 12:03:10.014330\n",
+      "Elapsed time: 00:06:59\n",
+      "rate constant set processed(1/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:03:10.020174\n",
+      "End exiton simulation: 2020-10-06 12:09:55.541431\n",
+      "Elapsed time: 00:06:45\n",
+      "rate constant set processed(2/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:09:55.545855\n",
+      "End exiton simulation: 2020-10-06 12:16:32.035630\n",
+      "Elapsed time: 00:06:36\n",
+      "rate constant set processed(3/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:16:32.037836\n",
+      "End exiton simulation: 2020-10-06 12:23:02.299699\n",
+      "Elapsed time: 00:06:30\n",
+      "rate constant set processed(4/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:23:02.303920\n",
+      "End exiton simulation: 2020-10-06 12:29:10.960317\n",
+      "Elapsed time: 00:06:08\n",
+      "rate constant set processed(5/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:29:10.962025\n",
+      "End exiton simulation: 2020-10-06 12:35:11.739312\n",
+      "Elapsed time: 00:06:00\n",
+      "rate constant set processed(6/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:35:11.743407\n",
+      "End exiton simulation: 2020-10-06 12:41:03.475446\n",
+      "Elapsed time: 00:05:51\n",
+      "rate constant set processed(7/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:41:03.481608\n",
+      "End exiton simulation: 2020-10-06 12:46:28.785453\n",
+      "Elapsed time: 00:05:25\n",
+      "rate constant set processed(8/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:46:28.786969\n",
+      "End exiton simulation: 2020-10-06 12:51:46.408297\n",
+      "Elapsed time: 00:05:17\n",
+      "rate constant set processed(9/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:51:46.418238\n",
+      "End exiton simulation: 2020-10-06 12:56:46.382878\n",
+      "Elapsed time: 00:04:59\n",
+      "rate constant set processed(10/ 10)\n",
+      "Start of exiton simulation: 2020-10-06 12:56:46.384437\n",
+      "End exiton simulation: 2020-10-06 13:01:37.872733\n",
+      "Elapsed time: 00:04:51\n",
+      "End exiton simulation: 2020-10-06 13:01:37.878174\n",
+      "Elapsed time: 01:05:27\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_ker_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(8000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
     "                                    diff_const, (1.07e15, 1.07e15/3),\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "exc_sim_ker_kbnr_diff_1.save()"
    ]
   },
